@startuml
class Vehiculo {
+ moverHacia(unaDireccion)
}

class Movimiento


class Esquina{
+ desplazarAOtraEsquina(:Esquina): Esquina
}

class Calle {
- obstaculo: Obstaculo
- sorpresa: Sorpresa
}

class Grilla

Grilla "1"*--"*" Esquina
Grilla "1" *-- "*" Calle
Calle "1"*--"2" Esquina

abstract class Direccion
class Arriba
class Abajo
class Derecha
class Izquierda



Arriba --|> Direccion
Abajo --|> Direccion
Derecha --|> Direccion
Izquierda --|> Direccion

Vehiculo "1" *-- "1" Movimiento
Vehiculo "1" *-- "1" Esquina
Movimiento "1" *-- "1"Direccion
@enduml
